# domni

./: .gitignore  Cargo.toml  README.md  consts.yml  dwarf.yml  example.json  example.yml  steel.yml
.cargo/: config.toml
data/: Biomes.txt  Spheres.txt  TokenDefinitions.xml  all_stats.txt  conditions.txt  core.json  counters.txt  goal_type.txt  mental_attribute_type.txt  mood_type.txt  need_type.txt  personality_facet_type.txt  physical_attribute_type.txt  pronouns.json  skill_rating.txt  skills.txt  unit_relationship_type.txt  value_type.txt  wound_effect_type.txt
data/Colors/: alternate.txt  default.txt
src/: json_magic.rs  lib.rs  pronoun.rs
src/core/: allow_empty.rs  any.rs  choose.rs  clamp.rs  df_char.rs  mod.rs  reference.rs  reference_to.rs  referenceable.rs
src/structure/: mod.rs
src/structure/objects/: body.rs  body_detail_plan.rs  building.rs  color.rs  creature.rs  creature_variation.rs  df_raw.rs  entity.rs  graphics.rs  inorganic.rs  interaction.rs  item.rs  language.rs  material.rs  mod.rs  pattern.rs  plant.rs  reaction.rs  shape.rs  tissue.rs
src/structure/objects/creature/: caste.rs  (+6 more)
src/structure/shared_enums/: attribute_enums.rs  biome_enum.rs  bp_app_modifier_enum.rs  creature_and_caste_flag_enums.rs  gender_enum.rs  interaction_enums.rs  key_bind.rs  labor_enum.rs  language_enums.rs  material_enums.rs  mod.rs  personality_trait_enum.rs  single_enums.rs  skill_enum.rs  sphere_enum.rs  unit_type_enum.rs
src/structure/shared_token_args/: bp_criteria_token_args.rs  cdi_token_args.rs  item_reference_args.rs  material_token_args.rs  mod.rs
(+7 files in other folders)
